# FastAPI-Auth-Service

./: .docker-env.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_07_01_1859-2f18b3c93ca1_create_users_table.py  2024_07_02_1702-02575bc2462b_create_users_table.py
auth_service/: config.py  database.py  main.py  models.py  routes.py
auth_service/auth/: dependencies.py  exceptions.py  models.py  repository.py  router.py  scemas.py  service.py  utils.py
